--- a/package.json
+++ b/package.json
@@ -5,10 +5,19 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "analyze": "ANALYZE=true next build",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
   "dependencies": {
+    "clsx": "^1.1.1",
+    "esbuild": "^0.12.15",
+    "gray-matter": "^4.0.3",
+    "mdx-bundler": "^5.1.0",
     "next": "11.0.1",
+    "next-compose-plugins": "^2.2.1",
+    "next-seo": "^4.26.0",
     "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-dark-mode-toggle": "^0.2.0",
@@ -21,10 +30,17 @@
     "@types/node": "^16.3.3",
     "@types/react": "^17.0.14",
     "autoprefixer": "^10.3.1",
-    "clsx": "^1.1.1",
-    "gray-matter": "^4.0.3",
-    "next-compose-plugins": "^2.2.1",
+    "eslint": "^7.31.0",
+    "eslint-config-next": "^11.0.1",
+    "globby": "^11.0.4",
+    "mdx-prism": "^0.3.3",
     "postcss": "^8.3.5",
+    "prettier": "^2.3.2",
+    "reading-time": "^1.3.0",
+    "rehype": "^11.0.0",
+    "remark-autolink-headings": "^6.0.1",
+    "remark-capitalize": "^1.1.0",
+    "remark-containers": "^1.2.0",
     "tailwindcss": "^2.2.4",
     "typescript": "^4.3.5"
   }
