--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typeface-open-sans": "^1.1.13"
   },
   "devDependencies": {
+    "@mapbox/rehype-prism": "^0.7.0",
     "@tailwindcss/typography": "^0.4.1",
     "@types/node": "^16.3.3",
     "@types/react": "^17.0.14",
@@ -33,14 +34,14 @@
     "eslint": "^7.31.0",
     "eslint-config-next": "^11.0.1",
     "globby": "^11.0.4",
-    "mdx-prism": "^0.3.3",
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
     "reading-time": "^1.3.0",
     "rehype": "^11.0.0",
-    "remark-autolink-headings": "^6.0.1",
+    "rehype-autolink-headings": "^5.1.0",
+    "rehype-slug": "^4.0.1",
     "remark-capitalize": "^1.1.0",
-    "remark-containers": "^1.2.0",
+    "remark-gfm": "^1.0.0",
     "tailwindcss": "^2.2.4",
     "typescript": "^4.3.5"
   }
