feat: add sidebar table of contents using IntersectionObserver

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "@utils/*": ["utils/*"],
       "@assets/*": ["assets/*"],
       "@config/*": ["config/*"],
+      "@hooks/*": ["hooks/*"],
       "@styles/*": ["styles/*"]
     }
   },
