--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prettier": "^2.3.2",
     "reading-time": "^1.3.0",
     "rehype": "^11.0.0",
+    "rehype-accessible-emojis": "^0.3.2",
     "rehype-autolink-headings": "^5.1.0",
     "rehype-slug": "^4.0.1",
     "remark-capitalize": "^1.1.0",
