--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^16.3.3",
     "@types/react": "^17.0.14",
     "autoprefixer": "^10.3.1",
+    "chalk": "^4.1.1",
     "eslint": "^7.31.0",
     "eslint-config-next": "^11.0.1",
     "globby": "^11.0.4",
@@ -43,6 +44,7 @@
     "rehype-slug": "^4.0.1",
     "remark-capitalize": "^1.1.0",
     "remark-gfm": "^1.0.0",
+    "rss": "^1.2.2",
     "tailwindcss": "^2.2.4",
     "typescript": "^4.3.5"
   }
