--- a/package.json
+++ b/package.json
@@ -9,14 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.15.3",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
+    "@heroicons/react": "^2.0.16",
+    "@mapbox/rehype-prism": "^0.8.0",
+    "@radix-ui/react-icons": "^1.2.0",
+    "@tailwindcss/typography": "^0.5.9",
+    "@vercel/og": "^0.4.0",
+    "clsx": "^1.2.1",
+    "gray-matter": "^4.0.3",
+    "kysely": "^0.23.5",
+    "kysely-planetscale": "^1.3.0",
+    "mdx-bundler": "^9.2.1",
     "next": "13.2.4",
+    "next-seo": "^5.15.0",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "rss": "^1.2.2",
+    "swr": "^2.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.15.3",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.36.0",
+    "eslint-config-next": "^13.2.4",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "reading-time": "^1.5.0",
+    "rehype": "^12.0.1",
+    "rehype-accessible-emojis": "^0.3.2",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
+    "tailwindcss": "^3.2.7",
+    "typescript": "^4.9.5"
   }
 }
